--- a/budget-planner/src/app/login/login.component.html
+++ b/budget-planner/src/app/login/login.component.html
@@ -40,9 +40,9 @@
                         Login
                     </button>
                 </div>
-                <div *ngIf="!loginFailed" class="error-message">
+                <!-- <div *ngIf="!loginFailed" class="error-message">
                     <p>Credentials are invalid. Please try again.</p>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <a href="/forgot-password">Forgot Password?</a>
                 </div>
