Imlemented upcoming bills for dashboard

--- a/budget-planner/src/app/expenses/expenses-overview/expenses-overview.component.html
+++ b/budget-planner/src/app/expenses/expenses-overview/expenses-overview.component.html
@@ -60,7 +60,7 @@
           </thead>
           <tbody>
             <tr *ngFor="let exp of filteredExpenseList">
-              <td>{{ exp.date | date:'yyyy-MM-dd' }}</td>
+              <td>{{ exp.date | date:'yyyy-MM-dd' : 'UTC'}}</td>
               <td>{{ exp.name }}</td>
               <td>{{ exp.category.name }}</td>
               <td>{{ exp.bankName }}</td>
