--- a/budget-planner/src/app/dashboard/dashboard.component.html
+++ b/budget-planner/src/app/dashboard/dashboard.component.html
@@ -11,5 +11,14 @@
           <p class="text-light mb-0" style="font-size: 1.2rem;">Welcome back to your dashboard!</p>
         </div>
     </div>
-    <app-dashboard-expense></app-dashboard-expense>
+    <div class="container mt-5">
+      <div class="row justify-content-center g-4">
+        <div class="col-md-6 col-lg-4">
+          <app-dashboard-expense></app-dashboard-expense>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <app-dashboard-upcoming-bill></app-dashboard-upcoming-bill>
+        </div>
+      </div>
+    </div>
 </div>
