Implemented Recent Transactions on Dashboard

--- a/budget-planner/src/app/dashboard/dashboard.component.html
+++ b/budget-planner/src/app/dashboard/dashboard.component.html
@@ -19,6 +19,9 @@
         <div class="col-md-6 col-lg-4">
           <app-dashboard-upcoming-bill></app-dashboard-upcoming-bill>
         </div>
+        <div class="col-md-6 col-lg-4">
+          <app-dashboard-recent-transactions></app-dashboard-recent-transactions>
+        </div>
       </div>
     </div>
 </div>
